<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        tools:context=".activities.addInventoryScreen.AddInventoryActivity">

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_item"
            android:drawableStart="@drawable/custom_title_icon"
            android:drawablePadding="12dp"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_item"
            android:drawableStart="@drawable/money_custom_item"
            android:drawablePadding="12dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textCursorDrawable="@drawable/cursor_color" />

        <EditText
            android:id="@+id/edit_manufacture"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_item"
            android:drawableStart="@drawable/manufacture_custom_item"
            android:drawablePadding="12dp"
            android:hint="@string/manufacture"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textCursorDrawable="@drawable/cursor_color" />


        <EditText
            android:id="@+id/edit_quantity"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_item"
            android:drawableStart="@drawable/custom_quantity_icon"
            android:drawablePadding="12dp"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textCursorDrawable="@drawable/cursor_color" />

        <ImageView
            android:id="@+id/imageViewInventory"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:src="@drawable/noimage" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/custom_button"
            android:onClick="buttonImage"
            android:src="@drawable/ic_baseline_camera_alt_24" />
    </LinearLayout>
</ScrollView>